HP-2004-07-30-0: Doc:       Description of exit_status values of shepherd
                 Issue:     97
                 Changed:   man8/sge_shepherd.8

SG-2004-07-30-0: Enhancem.: added a feature to filter the jobs in the
                            scheduler based on their category.
                 Changed:   schedler, schedd.conf(5)
                 Review:    AD

AD-2004-07-30-0: Cleanup:   The implementation of 'sge_add_auto_user()' made
                            the use of recursive mutexes neccessary.
                 Changed:   qmaster
                 Review:    SG

SG-2004-07-29-0: Bugfix:    Resending queue signals broken
                 Changed:   exed, qmaster
                 Issue:     1178
                 Bugtraq:   5079572
                 Review:    EB

CR-2004-07-28-1  Bugfix:    - Startup of qmaster changes act_qmaster to 
                              `hostname`,
                            - Two network cards in exec host: creates wrong 
                              directory / shutdown fails
                 Bugtraq:   5071522, 5079514
                 Issue:     1110, 1113
                 Changed:   install scripts, shadowd, gdi lib
                 Review:    RH

JG-2004-07-29-0: Bugfix:    qrsh starter didn't output reason (strerror), if it
                            couldn't write its pid file.
                 Testsuite: Make test functional/tight_integration use all hosts
                            of the testcluster.
                            Use category VERIFIED as default.
                 Changed:   qrsh_starter, testsuite
                 Review:    CR

AA-2004-07-28-1: Bugfix:    qmon's queue filtering doesn't work
                 Bugtraq:   5075936
                 Changed:   qmon
                 Review:    RH

AA-2004-07-28-0: Bugfix:    Wallclock time limit in qmon
                 Bugtraq:   5078783
                 Issue:     1162
                 Changed:   qmon
                 Review:    CR
