@@ -1,0 +1,87 @@
+Source Code Review Form 
+=======================
+(version 1.0)
+
+Date: 2004-07-29
+
+1 Identification
+1.1 Issue: 1183, 1168
+1.2 Bugtraq: 5080779, 5080784
+1.3 Summary: qconf -de did not check if the host ist still in use.
+1.4 Changelog ID: SG-2004-07-30-1 
+1.5 Developer(s): SG
+1.6 Reviewer(s): DT
+
+
+2 Conformance to specification
+2 [x] yes
+2 [ ] no - comment:
+
+
+3 Documentation
+3.1 user/admin guide
+3.1 [x] yes
+3.1 [ ] no - comment:
+
+3.2 man pages (user view)
+3.2 [x] yes
+3.2 [ ] no - comment:
+
+3.3 -help output
+3.3 [x] yes
+3.3 [ ] no - comment:
+
+3.4 documented interfaces (at least GDI, EVI, libs)
+3.4 [x] yes
+3.4 [ ] no - comment:
+
+3.5 messages, output formats
+3.5 [x] yes
+3.5 [ ] no - comment:
+
+
+4 Source review
+4.1 Style guide conformance
+4.1 [x] yes
+4.1 [ ] no - comment:
+
+4.2 Memory leaks
+4.2 [x] yes
+4.2 [ ] no - comment:
+
+4.3 Thread safe
+4.3 [x] yes
+4.3 [ ] no
+
+5 Tests
+5.1 Manual tests
+Description: 
+Successfull execution
+5.1 [X] yes
+5.1 [ ] no - comment:
+
+5.1 Used memory leak debugger
+5.1 [ ] yes
+5.1 [x] no - comment: no changes in the objects.
+
+5.2 Testsuite covers issue
+5.2 [ ] yes
+5.2 [X] no - comment: 
+
+5.3 If 5.2 = 1184
+5.3 [ ] yes
+5.3 [X] no - comment: issue 1184
+
+5.4 Testsuite run successfull
+5.4 [ ] yes
+5.4 [X] no - comment: pending
+
+
+6 Comments
+
+7 Accepted
+7 [X] yes
+7 [ ] no - comment:
+  
+
+
