@@ -1,3 +1,9 @@
+SG-2004-07-30-1: Bugfix:    qconf -de did not check if the host ist still in use.
+                 Issue:     1183, 1168
+                 Bugtraq:   5080779, 5080784
+                 Changed:   qstat, qmaster
+                 Review:    DT
+
 HP-2004-07-30-0: Doc:       Description of exit_status values of shepherd
                  Issue:     97
                  Changed:   man8/sge_shepherd.8
